# capiba-zed

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  extension.toml  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml
docs/: architecture.md  postmortems.md  quality.md  setup.md  troubleshooting.md
mcp-server/: Cargo.toml
mcp-server/src/: flags.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs
mcp-server/tests/: integration.rs
prompts/: Cargo.toml
prompts/src/: lib.rs
scripts/: build.sh
src/: lib.rs  prompts.rs
xtask/: Cargo.toml
xtask/src/: main.rs
